# routes/actors.js
@@ -3,10 +3,22 @@ const router = express.Router();
 
 const actorsController = require('../controllers/actorsController');
 
-router.get('/', actorsController.getAllActors);
+router.get('/', actorsController.getAllActors, (req, res) =>{
+    // #swagger.tags = ['Actors']
+    // #swagger.description = 'Endpoint to get all actors.'
+    
+});
 
-router.get('/:id', actorsController.getSingleActor);
+router.get('/:id', actorsController.getSingleActor, (req, res) =>{
+    // #swagger.tags = ['Actors']
+    // #swagger.description = 'Endpoint to get a single actor.'
+     // #swagger.parameters['id'] = { description: 'Actor ID.' }
 
-router.post('/', actorsController.addActor);
+});
+
+router.post('/', actorsController.addActor, (req, res) =>{
+    // #swagger.tags = ['Actors']
+    // #swagger.description = 'Endpoint to add a new actor.'
+});
 
 module.exports = router;
