# routes/dramas.js
@@ -3,8 +3,21 @@ const router = express.Router();
 
 const dramasController = require('../controllers/dramasController');
 
-router.get('/', dramasController.getAllDramas);
+router.get('/', dramasController.getAllDramas, (req, res) =>{
+    // #swagger.tags = ['Dramas']
+    // #swagger.description = 'Endpoint to get all dramas.'
+});
 
-router.get('/:id', dramasController.getSingleDrama);
+router.get('/:id', dramasController.getSingleDrama, (req, res) =>{
+    // #swagger.tags = ['Dramas']
+    // #swagger.description = 'Endpoint to get a single drama.'
+     // #swagger.parameters['id'] = { description: 'Drama ID.' }
+
+});
+router.post('/', dramasController.addDrama, (req, res) =>{
+    // #swagger.tags = ['Dramas']
+    // #swagger.description = 'Endpoint to add a new drama.'
+});
+
 
 module.exports = router;
