# swagger-output.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Contacts API",
+    "title": "K-Dramas API",
     "description": "Documentation generated by swagger-autogen."
   },
   "host": "jatsi341-assignment5.onrender.com",
@@ -13,42 +13,10 @@
   "paths": {
     "/dramas/": {
       "get": {
-        "description": "",
-        "produces": [
-          "application/json"
+        "tags": [
+          "Dramas"
         ],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/dramas/{id}": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/actors/": {
-      "get": {
-        "description": "",
+        "description": "Endpoint to get all dramas.",
         "produces": [
           "application/json"
         ],
@@ -60,7 +28,98 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Dramas"
+        ],
+        "description": "Endpoint to add a new drama.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "content": {
+                  "example": "any"
+                },
+                "chapters": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "producer": {
+                  "example": "any"
+                },
+                "writer": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "The k-Drama was added successfully"
+          },
+          "500": {
+            "description": "Faling adding the K-Drama"
+          }
+        }
+      }
+    },
+    "/dramas/{id}": {
+      "get": {
+        "tags": [
+          "Dramas"
+        ],
+        "description": "Endpoint to get a single drama.",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Drama ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/actors/": {
+      "get": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "Endpoint to get all actors.",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Actors"
+        ],
+        "description": "Endpoint to add a new actor.",
         "parameters": [
           {
             "name": "body",
@@ -86,17 +145,20 @@
         ],
         "responses": {
           "201": {
-            "description": "The contact was created successfully"
+            "description": "The actor was added successfully"
           },
           "500": {
-            "description": "Faling creating the contact"
+            "description": "Faling adding the actor"
           }
         }
       }
     },
     "/actors/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Actors"
+        ],
+        "description": "Endpoint to get a single actor.",
         "produces": [
           "application/json"
         ],
@@ -105,7 +167,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Actor ID."
           }
         ],
         "responses": {
